Aligning right tour stop for sort.

--- a/media/scss/style-newui.scss
+++ b/media/scss/style-newui.scss
@@ -2511,6 +2511,13 @@ a#zenbox_tab {
     &.firstStop {
         margin-left: -3px;
     }
+    &.sortStop {
+        margin-left: -200px;
+        .joyride-nub {
+            left: auto;
+            right: 22px;
+        }
+    }
     &.lastStop {
         margin-top: -390px;
         margin-left: 355px;
@@ -2524,8 +2531,9 @@ a#zenbox_tab {
     padding: 3px 13px;
     text-shadow: 0 0;
     box-shadow: 0 0;
-    margin-top: 25px;
+    margin-top: 30px;
     margin-bottom: 10px;
+    font-size: $largeFont;
     @include custom-border-radius (0, 0, 0, 0);
     &:hover {
         border: 0 none !important;
